hphp/test/slow/record/record-unset.php.expectf
Fatal error: Cannot unset a record field in %s/record-unset.php on line 8
